# tool-discovery-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README_GRAPH_AGENT.md  REMOTE_ROBOT_DEBUGGING.md  build.gradle.kts  docker-compose.yml  gradle.properties  pyproject.toml  requirements.txt  settings.gradle.kts
.github/workflows/: ci.yml
benchmark/: extract_method.json  move_method.json  rename.json  tasks.json
configs/: default.yaml  local.yaml.example
docs/: graph_agent_evaluation.md
docs/superpowers/plans/: 2026-03-29-graph-agent-refactor.md  2026-03-29-graph-based-approach-implementation.md  2026-03-29-kotlin-graph-agent-implementation.md  2026-04-20-graph-agent-stabilization-continuation.md
docs/superpowers/specs/: 2026-04-18-graph-agent-stabilization-design.md
docs/test-results/: README.md  task-1-element-id-live-test.md
intellij-plugin/: .gitignore  build.gradle.kts  run-smoke-test.sh  settings.gradle.kts
intellij-plugin/data/: intellij_profile.json  knowledge_graph_shortcuts_test.json  knowledge_graph_smoke_test.json  knowledge_graph_test.json
intellij-plugin/src/test/kotlin/: BaseTest.kt  ClickActionTest.kt  DebugConfigTest.kt  EnvConfigTest.kt  FocusDebugTest.kt  GraphAgentRunTest.kt  GraphAgentSmokeTest.kt  KeyboardActionTest.kt  (+6 more)
src/: __init__.py  api.py  main.py
src/agent/: __init__.py  discovery.py  executor.py  graph_agent.py  knowledge_graph.py  planner.py
src/evaluation/: runner.py  tasks.py
src/perception/: __init__.py  remote_robot.py  ui_tree.py
src/test/kotlin/: BaseTest.kt
src/test/resources/: idea-test-logging.properties
src/utils/: __init__.py  logging.py
(+119 files in other folders)
